css/main.css
/* Tailwind use */



/* * old CSS for previous calculator design

{ */
	/* background-color: grey; */
/* } */

/* #number { */
	/* width: 1000px; */
	/* height: px; */
	/* background-color: pink; */
/* } */

/* div.enter { */
	/* color: #fffff; */
/* } */

/* body, div, a { */
	/* padding: 0; */
	/* margin: 0; */
	/* font-family: Tahoma, Geneva, sans-serif; */
/* } */

/* #calculator { */
	/* width: 310px; */
    /* height: 460px; */
    /* margin: 20px auto; */
    /* padding: 10px; */
    /* background-color: pink; */
    /* border: 6px solid black; */
/* } */

/* #total { */
	/* height: 70px; */
	/* width: 300px; */
	/* margin: 0; */
	/* margin-bottom: 5px; */
	/* padding: 0 5px; */
	/* background-color: #fff; */
	/* text-align: right; */
	/* font-size: 60px; */
/* } */

/* #numbers { */
	/* margin: 0px; */
/* } */

/* #operators { */
	/* margin: 0px; */
/* } */
/* f */
/* a { */
	/* cursor: pointer; */
/* } */

/* #operators a { */
    /* display: block; */
    /* width: 45px; */
    /* height: 45px; */
    /* float: left; */
    /* padding: 2px; */
    /* margin: 5px 6px; */
    /* text-align: center; */
    /* text-decoration: none; */
    /* color: black; */
    /* font-size: 39px; */
    /* background: -webkit-gradient(linear, left top, left bottom, from(#EDEDED), to(#DCDCDC)); */
    /* background: -moz-linear-gradient(top, #EDEDED, #DCDCDC); */
    /* border-radius: 10px; */
/* } */

/* #numbers a { */
    /* display: block; */
    /* float: left; */
    /* text-align: center; */
    /* color: black; */
    /* font-size: 43px; */
    /* text-decoration: none; */
    /* width: 50px; */
    /* height: 50px; */
    /* padding: 10px; */
    /* margin: 5px 15px; */
     /* background: -webkit-gradient(linear, left top, left bottom, from(#EDEDED), to(#DCDCDC)); */
    /* background: -moz-linear-gradient(top, #EDEDED, #DCDCDC); */
    /* border-radius: 10px; */
/* } */

